# rust-microservice

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.temp  README.md  launch.json
migrations/2019-09-05-034855_users/: up.sql
src/: handlers.rs  main.rs  models.rs  validation.rs
