[package]
name = "user-service"
version = "0.1.0"
authors = ["Damian Esteban <damian.esteban@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-rt = "0.2.2"
actix-identity = "0.1.0"
actix-web = "1.0.3"
argonautica = "0.2.0"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
derive_more = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.6"
futures = "0.1"
jsonwebtoken = "6"
r2d2 = "0.8"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5.2"
frank_jwt = "3.1.1"
log = "0.4"
pretty_env_logger = "0.3"
openssl = "*"